ready for deployment with database

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Come with us now, on a journey through time and space, to the world of The Mighty Boosh!",
   "main": "index.js",
   "scripts": {
-    "knex": "knex", 
+    "knex": "knex",
+    "postinstall": "knex migrate:latest && knex seed:run",
     "start": "node index",
     "test": "echo \"Error: The Boosh is loose and we're a little bit raw!\" && exit 1"
   },
@@ -16,6 +17,7 @@
     "express": "^4.14.0",
     "express-handlebars": "^3.0.0",
     "knex": "^0.12.6",
+    "pg": "^6.1.2",
     "socket.io": "^1.7.2"
   },
   "devDependencies": {
